--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,19 @@
-flask
-flask_apscheduler
-requests
+APScheduler==3.11.1
+blinker==1.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+Flask==3.1.2
+Flask-APScheduler==1.13.1
+gunicorn==23.0.0
+idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+packaging==25.0
+python-dateutil==2.9.0.post0
+requests==2.32.5
+six==1.17.0
+tzlocal==5.3.1
+urllib3==2.6.2
+Werkzeug==3.1.4
